# lerc-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  publish.yml
benches/: codec.rs  iai_codec.rs  profile_encode.rs
crates/lerc-cpp-ref/: Cargo.toml  build.rs  fletcher32_shim.cpp  gen_constants.cpp
crates/lerc-cpp-ref/src/: lib.rs
examples/: profile.rs
src/: bitmask.rs  bitstuffer.rs  checksum.rs  decode.rs  encode.rs  error.rs  header.rs  huffman.rs  lerc1.rs  lib.rs  rle.rs  tiles.rs  types.rs
src/encode/: huffman.rs  mod.rs  optimizations.rs  tiles.rs
src/encode/tiles/: inner.rs  mod.rs  u8_fast.rs
src/fpl/: compression.rs  mod.rs  predictor.rs
tests/: bit_plane_compression.rs  compression_ratio.rs  convenience.rs  cpp_byte_identity.rs  cpp_cross_validation.rs  cross_validation.rs  decode_into.rs  diff_encoding.rs  encode_borrowed.rs  fpl_coverage.rs  integration.rs  nodata.rs  proptest_tests.rs
