[workspace]
members = [".", "crates/lerc-cpp-ref"]
default-members = ["."]

[package]
name = "lerc"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Pure Rust LERC (Limited Error Raster Compression) encoder and decoder"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
cpp-validation = []

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
lerc-cpp-ref = { path = "crates/lerc-cpp-ref" }

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "profile_encode"
harness = false

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.18", default-features = false }
