[workspace]
members = [".", "crates/lerc-cpp-ref"]
default-members = ["."]

[package]
name = "lerc-rs"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Pure Rust LERC (Limited Error Raster Compression) encoder and decoder"
repository = "https://github.com/NathanHowell/lerc-rs"
documentation = "https://docs.rs/lerc-rs"
keywords = ["lerc", "raster", "compression", "geospatial", "esri"]
categories = ["compression", "encoding", "no-std"]
exclude = ["esri-lerc/", "crates/", "benches/", "examples/", "tests/"]

[lib]
name = "lerc"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
cpp-validation = []

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }
iai-callgrind = "0.16"
lerc-cpp-ref = { path = "crates/lerc-cpp-ref" }

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "profile_encode"
harness = false

[[bench]]
name = "iai_codec"
harness = false

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.18", default-features = false }
